Fix broke rtl alignments

--- a/src/app/home/pages/home/home.component.scss
+++ b/src/app/home/pages/home/home.component.scss
@@ -88,7 +88,7 @@
   padding: 50px 0;
   background-repeat: no-repeat;
   background-position: 90%;
-  body[dir='rtl'] :host & {
+  [dir='rtl'] :host & {
     background-position: 10%;
   }
 
