--- a/src/app/layout/search/search.component.scss
+++ b/src/app/layout/search/search.component.scss
@@ -101,7 +101,7 @@
   }
 }
 
-body[dir='rtl'] :host {
+[dir='rtl'] :host {
   .search-where {
     border-radius: 0 4px 4px 0;
   }
